--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ BugReports: https://github.com/kesondrakey/fluxtools/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
