Updating for CRAN submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,26 @@
+Type: Package
 Package: fluxtools
 Title: Fluxtools: Interactive QA/QC for AmeriFlux Data
 Version: 0.1.0
 Authors@R: 
     person("Kesondra", "Key", , "keyke@iu.edu", role = c("aut", "cre"))
-Description: A Shiny–based interactive QA/QC tool for flux tower data,
-    generating removal code and cleaned csv
+Description: A Shiny-based interactive QA/QC tool for flux tower data
+    processing. It generates data-point removal code with user-directed
+    point removal and can output a cleaned CSV.
 License: MIT + file LICENSE
 URL: https://github.com/kesondrakey/fluxtools
 BugReports: https://github.com/kesondrakey/fluxtools/issues
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+Imports: 
+    dplyr,
+    plotly,
+    shiny
 Suggests: 
     knitr,
     rmarkdown
-VignetteBuilder: knitr
+VignetteBuilder: 
+    knitr
+BuildVignettes: FALSE
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
