--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Type: Package
 Package: fluxtools
 Title: Fluxtools: Interactive QA/QC for AmeriFlux Data
-Version: 0.3.0
+Version: 0.2.0
 Authors@R: 
     person("Kesondra", "Key", , "keyke@iu.edu", role = c("aut", "cre"))
 Description: A Shiny-based interactive QA/QC tool for flux tower data
     processing. It generates data-point removal code with user-directed
     point removal and can output a cleaned csv.
-License: GPL (>= 3)
+License: GPL-3
 URL: https://github.com/kesondrakey/fluxtools
 BugReports: https://github.com/kesondrakey/fluxtools/issues
 Imports: 
