--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,11 @@ Title: Interactive QA/QC for Ameriflux Data
 Version: 0.2.0
 Authors@R: 
     person("Kesondra", "Key", , "keyke@iu.edu", role = c("aut", "cre"))
-Description: Fluxtools provides a Shiny-based interactive QA/QC tool for
-    eddy-covariance flux-tower data processing. It generates data-point
-    removal code via user-directed selection from a scatterplot, and can
-    export a cleaned CSV with removed points set to NA plus an R script
-    for reproducibility. Reference: Key (2025) <DOI:
-    10.5281/zenodo.15597159>.
+Description: An interactive Shiny-based tool for QA/QC of eddy covariance
+    flux tower data processing. It generates data-point removal code via
+    user-directed selection from a scatterplot, and can export a cleaned
+    CSV with removed points set to NA plus an R script for
+    reproducibility. Reference: Key (2025) <DOI: 10.5281/zenodo.15597159>.
 License: GPL-3
 URL: https://github.com/kesondrakey/fluxtools,
     https://doi.org/10.5281/zenodo.15597159
@@ -23,6 +22,7 @@ Suggests:
     rmarkdown
 VignetteBuilder: 
     knitr
+BuildVignettes: FALSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
