--- a/workflows/draft-pdf.yml
+++ b/workflows/draft-pdf.yml
@@ -12,32 +12,26 @@ permissions:
   contents: write       # so the workflow can commit the PDF back
 
 jobs:
-  paper:
+  build:
     runs-on: ubuntu-latest
-    name: Paper Draft
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Build draft PDF
         uses: openjournals/openjournals-draft-action@master
         with:
           journal: joss
-          # This should be the path to the paper within your repo.
-          paper-path:  paper/paper.md
+          paper-path: paper/paper.md
 
-      - name: Upload
+      - name: Upload PDF artifact
         uses: actions/upload-artifact@v4
         with:
-          name: paper
-          # This is the output path where Pandoc will write the compiled
-          # PDF. Note, this should be the same directory as the input
-          # paper.md
+          name: joss-paper
           path: paper.pdf
 
-    - name: Commit PDF to repository
-      uses: EndBug/add-and-commit@v9
-      with:
-        message: '(auto) Paper PDF Draft'
-        # This should be the path to the paper within your repo.
-        add: 'paper.pdf' # 'paper/*.pdf' to commit all PDFs in the paper directory
+      - name: Commit PDF back to repo
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: '(auto) add draft paper.pdf'
+          add: 'paper.pdf'
