--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Suggests:
     rmarkdown
 VignetteBuilder: 
     knitr
-BuildVignettes: FALSE
+BuildVignettes: TRUE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
