--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Type: Package
 Package: fluxtools
-Title: Interactive QA/QC for AmeriFlux Data
+Title: Interactive QA/QC for Eddy Covariance Data
 Version: 0.3.0
 Authors@R: 
     person("Kesondra", "Key", , "keyke@iu.edu", role = c("aut", "cre"))
 Description: An interactive Shiny-based tool for QA/QC of eddy covariance
     flux tower data processing. It generates data-point removal code via
     user-directed selection from a scatterplot, and can export a cleaned
-    CSV with removed points set to NA plus an R script for
+    .csv with removed points set to NA plus an R script for
     reproducibility. Reference: Key (2025) <DOI: 10.5281/zenodo.15597159>.
 License: GPL-3
 URL: https://github.com/kesondrakey/fluxtools,
