--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Type: Package
 Package: fluxtools
-Title: Interactive QA/QC for Eddy Covariance Data
+Title: an Interactive 'shiny' App for Reproducible QA/QC of Eddy
+    Covariance Data Aligned with AmeriFlux Standards
 Version: 0.3.0
 Authors@R: 
     person("Kesondra", "Key", , "keyke@iu.edu", role = c("aut", "cre"))
-Description: An interactive Shiny-based tool for QA/QC of eddy covariance
-    flux tower data processing. It generates data-point removal code via
-    user-directed selection from a scatterplot, and can export a cleaned
-    .csv with removed points set to NA plus an R script for
-    reproducibility. Reference: Key (2025) <DOI: 10.5281/zenodo.15597159>.
+Description: An interactive 'shiny'-based tool for quality assurance and
+    quality control (QA/QC) of eddy covariance flux tower data processing.
+    It generates data-point removal code via user-directed selection from
+    a scatterplot, and can export a cleaned .csv with removed points set
+    to NA plus an R script for reproducibility. Reference: Key (2025)
+    <DOI:10.5281/zenodo.15597159>.
 License: GPL-3
-URL: https://github.com/kesondrakey/fluxtools,
-    https://doi.org/10.5281/zenodo.15597159
+URL: 
+    https://github.com/kesondrakey/fluxtoolshttps://doi.org/10.5281/zenodo.15597159
 BugReports: https://github.com/kesondrakey/fluxtools/issues
 Imports: 
     dplyr,
